--- a/index.html
+++ b/index.html
@@ -1,114 +1,126 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>AirMug Pro</title>
     <!-- Google Fonts - Noto Sans KR 400, 900 -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;900&display=swap"
+      rel="stylesheet"
+    />
     <!-- default.css : reset css(기본적인 처리 ex.여백 제거 등등..)-->
-    <link rel="stylesheet" href="css/default.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/default.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <nav class="global-nav">
-            <div class="global-nav-links">
-                <a href="#" class="global-nav-item">Rooms</a>
-                <a href="#" class="global-nav-item">Ideas</a>
-                <a href="#" class="global-nav-item">Stores</a>
-                <a href="#" class="global-nav-item">Contact</a>
-            </div>
-        </nav>
-        <nav class="local-nav">
-            <div class="local-nav-links">
-                <a href="#" class="product-name">AirMug Pro</a>
-                <a href="#" class="local-nav-item">개요</a>
-                <a href="#" class="local-nav-item">제품사양</a>
-                <a href="#" class="local-nav-item">구입하기</a>
-            </div>
-        </nav>
-        <section class="scroll-section" id="scroll-section-0">
-            <h1>AirMug Pro</h1>
-            <div class="sticky-elem main-message">
-                <p>온전히 빠져들게 하는<br>최고급 세라믹</p>
-            </div>
-            <div class="sticky-elem main-message">
-                <p>주변 맛을 느끼게 해주는<br>주변 맛 허용 모드</p>
-            </div>
-            <div class="sticky-elem main-message">
-                <p>온종일 편안한<br>맞춤형 손잡이</p>
-            </div>
-            <div class="sticky-elem main-message">
-                <p>새롭게 입가를<br>찾아온 매혹</p>
-            </div>
-        </section>
-        <section class="scroll-section" id="scroll-section-1">
-            <p class="description">
-                <strong>보통 스크롤 영역</strong>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptas architecto corporis sequi atque
-                ducimus tempora officiis distinctio praesentium! Voluptatem veritatis iure deleniti numquam quae soluta,
-                minus nobis rem labore. Tempora velit repudiandae quibusdam libero minima maxime doloremque minus
-                perspiciatis ea magnam sed, laboriosam possimus deleniti provident qui odit doloribus dicta aliquid
-                suscipit esse! Laboriosam, quidem. Nesciunt placeat laudantium assumenda fugit deleniti. Quo vel
-                inventore enim iure pariatur sint. Reiciendis ratione odit, explicabo dolorum vero excepturi
-                necessitatibus cupiditate doloremque quis hic laborum quaerat totam veniam amet nulla est ab cum quae!
-                Nesciunt cumque, temporibus, iusto ad, incidunt accusamus quidem quia veritatis est laborum deleniti
-                dignissimos rerum laudantium. Tempore quam atque quia explicabo earum incidunt ipsa nam doloribus ipsam
-                quidem unde eligendi consequatur veritatis cupiditate tempora officiis et, repudiandae quisquam
-                accusantium, alias reiciendis magni aperiam a error! Magni nam deserunt dolorum hic ducimus ea? Commodi
-                aliquid voluptatibus temporibus eos in esse explicabo obcaecati molestias consectetur vel. Accusamus
-                labore cum quam ex maiores quos consequatur accusantium dolorum placeat recusandae obcaecati est,
-                eligendi officia quaerat doloremque. Quod recusandae ratione totam illo eaque magnam nesciunt, labore
-                quisquam laborum iure veniam odit ut dignissimos aliquid beatae earum nostrum. Veniam aperiam tenetur
-                perferendis rerum iste ratione?
-            </p>
-        </section>
-        <section class="scroll-section" id="scroll-section-2">
-            <div class="sticky-elem main-message">
-                <p>
-                    <small>편안한 촉감</small>
-                    입과 하나 되다
-                </p>
-            </div>
-            <div class="sticky-elem desc-message">
-                <p>
-                    편안한 목넘김을 완성하는 디테일한 여러 구성 요소들, 우리는 이를 하나하나 새롭게 살피고 재구성하는 과정을 거쳐 새로운 수준의 머그, AirMug Pro를 만들었습니다. 입에 뭔가
-                    댔다는 감각은 어느새 사라지고 오롯이 당신과 음료만 남게 되죠.
-                </p>
-                <div class="pin"></div>
-            </div>
-            <div class="sticky-elem desc-message">
-                <p>
-                    디자인 앤 퀄리티 오브 스웨덴,<br>메이드 인 차이나
-                </p>
-                <div class="pin"></div>
-            </div>
-        </section>
-        <section class="scroll-section" id="scroll-section-3">
-            <p class="mid-message">
-                <strong>Retina 머그</strong><br>
-                아이디어를 광활하게 펼칠<br>
-                아름답고 부드러운 음료 공간
-            </p>
-            <p class="canvas-caption">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad magnam, eligendi, provident maiores quaerat
-                sit eum voluptates voluptatum voluptatibus, voluptatem error repudiandae! Minus voluptas atque, amet
-                fugiat officia distinctio iure nostrum quo ex odio mollitia ut eos? Temporibus tempore velit iste, ullam
-                aliquid omnis quisquam doloremque laudantium, minus molestiae nesciunt possimus laboriosam. Delectus
-                quaerat facere, cupiditate ut voluptatibus, eaque dolorem accusamus ex assumenda soluta asperiores
-                facilis qui fuga reprehenderit ducimus laborum cumque dolor eos nemo reiciendis recusandae optio nam
-                beatae quia. Quae sequi consequuntur, aperiam mollitia quisquam iste delectus architecto, natus
-                praesentium, laudantium porro ipsam. Numquam ab qui a quibusdam.
-            </p>
-        </section>
-        <footer class="footer">
-            2020, 1분코딩
-        </footer>
+      <nav class="global-nav">
+        <div class="global-nav-links">
+          <a href="#" class="global-nav-item">Rooms</a>
+          <a href="#" class="global-nav-item">Ideas</a>
+          <a href="#" class="global-nav-item">Stores</a>
+          <a href="#" class="global-nav-item">Contact</a>
+        </div>
+      </nav>
+      <nav class="local-nav">
+        <div class="local-nav-links">
+          <a href="#" class="product-name">AirMug Pro</a>
+          <a href="#" class="local-nav-item">개요</a>
+          <a href="#" class="local-nav-item">제품사양</a>
+          <a href="#" class="local-nav-item">구입하기</a>
+        </div>
+      </nav>
+      <section class="scroll-section" id="scroll-section-0">
+        <h1>AirMug Pro</h1>
+        <div class="sticky-elem main-message">
+          <p>온전히 빠져들게 하는<br />최고급 세라믹</p>
+        </div>
+        <div class="sticky-elem main-message">
+          <p>주변 맛을 느끼게 해주는<br />주변 맛 허용 모드</p>
+        </div>
+        <div class="sticky-elem main-message">
+          <p>온종일 편안한<br />맞춤형 손잡이</p>
+        </div>
+        <div class="sticky-elem main-message">
+          <p>새롭게 입가를<br />찾아온 매혹</p>
+        </div>
+      </section>
+      <section class="scroll-section" id="scroll-section-1">
+        <p class="description">
+          <strong>보통 스크롤 영역</strong>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+          voluptas architecto corporis sequi atque ducimus tempora officiis
+          distinctio praesentium! Voluptatem veritatis iure deleniti numquam
+          quae soluta, minus nobis rem labore. Tempora velit repudiandae
+          quibusdam libero minima maxime doloremque minus perspiciatis ea magnam
+          sed, laboriosam possimus deleniti provident qui odit doloribus dicta
+          aliquid suscipit esse! Laboriosam, quidem. Nesciunt placeat laudantium
+          assumenda fugit deleniti. Quo vel inventore enim iure pariatur sint.
+          Reiciendis ratione odit, explicabo dolorum vero excepturi
+          necessitatibus cupiditate doloremque quis hic laborum quaerat totam
+          veniam amet nulla est ab cum quae! Nesciunt cumque, temporibus, iusto
+          ad, incidunt accusamus quidem quia veritatis est laborum deleniti
+          dignissimos rerum laudantium. Tempore quam atque quia explicabo earum
+          incidunt ipsa nam doloribus ipsam quidem unde eligendi consequatur
+          veritatis cupiditate tempora officiis et, repudiandae quisquam
+          accusantium, alias reiciendis magni aperiam a error! Magni nam
+          deserunt dolorum hic ducimus ea? Commodi aliquid voluptatibus
+          temporibus eos in esse explicabo obcaecati molestias consectetur vel.
+          Accusamus labore cum quam ex maiores quos consequatur accusantium
+          dolorum placeat recusandae obcaecati est, eligendi officia quaerat
+          doloremque. Quod recusandae ratione totam illo eaque magnam nesciunt,
+          labore quisquam laborum iure veniam odit ut dignissimos aliquid beatae
+          earum nostrum. Veniam aperiam tenetur perferendis rerum iste ratione?
+        </p>
+      </section>
+      <section class="scroll-section" id="scroll-section-2">
+        <div class="sticky-elem main-message">
+          <p>
+            <small>편안한 촉감</small>
+            입과 하나 되다
+          </p>
+        </div>
+        <div class="sticky-elem desc-message">
+          <p>
+            편안한 목넘김을 완성하는 디테일한 여러 구성 요소들, 우리는 이를
+            하나하나 새롭게 살피고 재구성하는 과정을 거쳐 새로운 수준의 머그,
+            AirMug Pro를 만들었습니다. 입에 뭔가 댔다는 감각은 어느새 사라지고
+            오롯이 당신과 음료만 남게 되죠.
+          </p>
+          <div class="pin"></div>
+        </div>
+        <div class="sticky-elem desc-message">
+          <p>디자인 앤 퀄리티 오브 스웨덴,<br />메이드 인 차이나</p>
+          <div class="pin"></div>
+        </div>
+      </section>
+      <section class="scroll-section" id="scroll-section-3">
+        <p class="mid-message">
+          <strong>Retina 머그</strong><br />
+          아이디어를 광활하게 펼칠<br />
+          아름답고 부드러운 음료 공간
+        </p>
+        <p class="canvas-caption">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad magnam,
+          eligendi, provident maiores quaerat sit eum voluptates voluptatum
+          voluptatibus, voluptatem error repudiandae! Minus voluptas atque, amet
+          fugiat officia distinctio iure nostrum quo ex odio mollitia ut eos?
+          Temporibus tempore velit iste, ullam aliquid omnis quisquam doloremque
+          laudantium, minus molestiae nesciunt possimus laboriosam. Delectus
+          quaerat facere, cupiditate ut voluptatibus, eaque dolorem accusamus ex
+          assumenda soluta asperiores facilis qui fuga reprehenderit ducimus
+          laborum cumque dolor eos nemo reiciendis recusandae optio nam beatae
+          quia. Quae sequi consequuntur, aperiam mollitia quisquam iste delectus
+          architecto, natus praesentium, laudantium porro ipsam. Numquam ab qui
+          a quibusdam.
+        </p>
+      </section>
+      <footer class="footer">2020, 1분코딩</footer>
     </div>
-</body>
 
+    <script src="js/main.js"></script>
+  </body>
 </html>
