스크롤로 비디오 제어하기

--- a/videotest/01-video.html
+++ b/videotest/01-video.html
@@ -10,7 +10,7 @@
 			padding: 0;
 		}
 		body {
-			height: 500vh;
+			height: 500vh; 
 		}
 		body.before-load {
 			overflow-y: hidden;
@@ -24,6 +24,9 @@
 	</style>
 </head>
 <body class="before-load">
+	<!-- 비디오를 직접처리하게 되면 비디오의 해상도가 조금만 고화질이여도 버벅인다 
+		=> 다른 방법이 필요 
+		=> -->
 	<video class="sample-video" src="../video/sample-low.mp4" muted></video>
 	<!-- <video class="sample-video" src="../video/sample-high.mp4" muted></video> -->
 
@@ -35,11 +38,18 @@
 			document.body.classList.remove('before-load');
 
 			window.addEventListener('scroll', function () {
+				/* pageYOffset : 현재 스크롤의 위치
+				document.body.offsetHeight : <body> 요소의 높이 (body안에 들어있는 콘텐츠가 많아지면 커진다)
+				window.innerHeight : 브라우저 창의 높이 (body안에 콘텐츠 양에 상관 없이 창의 크기) 
+				스크롤 가동 범위 = 두개의 차이 
+				progress : 현재 얼만큼 스크롤이 됬는지의 비율 */
 				progress = pageYOffset / (document.body.offsetHeight - window.innerHeight);
 				console.log(progress);
 				if (progress < 0) progress = 0;
 				if (progress > 1) progress = 1;
 
+				// currentTime : 현재 재생 시간
+				// duration : 비디오의 전체 재생 시간
 				videoElem.currentTime = videoElem.duration * progress;
 			});
 		}
