고화질 비디오 부드럽게 처리하기 1

--- a/videotest/02-image.html
+++ b/videotest/02-image.html
@@ -41,6 +41,9 @@
 			}
 		}
 
+		/* 핵심 : 스크롤 값에 따라서 이미지의 시퀀스를 조절해 마치 비디오같은 효과를 낸다 
+		Q. 용량이 너무 크지 않나요?
+		A. 최적화하면 더 작음.. */
 		function init() {
 			document.body.classList.remove('before-load');
 
