--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                 아이디어를 광활하게 펼칠<br />
                 아름답고 부드러운 음료 공간
             </p>
+            <canvas class="image-blend-canvas" width="1920" height="1080"></canvas>
             <p class="canvas-caption">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad magnam,
                 eligendi, provident maiores quaerat sit eum voluptates voluptatum
