--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
-<body>
+<body class="before-load">
     <div class="loading">
         <svg class="loading-circle">
             <circle cx="50%" cy="50%" r="25"></circle>
