--- a/videotest/smoothscroll.html
+++ b/videotest/smoothscroll.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
 		body {
 			height: 500vh;
 		}
+
 		.box {
 			position: fixed;
 			top: 100px;
@@ -18,6 +20,7 @@
 		}
 	</style>
 </head>
+
 <body>
 	<div class="box"></div>
 
@@ -30,6 +33,7 @@
 
 		window.addEventListener('scroll', () => {
 			// box.style.width = `${window.pageYOffset}px`;
+			// 스크롤을 멈췄을 때 loop에서 탈출해 더이상 실행이 안 되는 것을 방지
 			if (!rafState) {
 				rafId = requestAnimationFrame(loop);
 				rafState = true;
@@ -37,12 +41,14 @@
 		});
 
 		function loop() {
+			// O o . -> 거리가 점점 작아지면서 0에 수렴하는 원리
 			delayedYOffset = delayedYOffset + (pageYOffset - delayedYOffset) * acc;
 			box.style.width = `${delayedYOffset}px`;
 			console.log('loop');
 
 			rafId = requestAnimationFrame(loop);
 
+			// 무한 loop 해결
 			if (Math.abs(pageYOffset - delayedYOffset) < 1) {
 				cancelAnimationFrame(rafId);
 				rafState = false;
@@ -52,4 +58,5 @@
 		loop();
 	</script>
 </body>
+
 </html>
