하단 콘텐츠 추가하기

--- a/index.html
+++ b/index.html
@@ -128,6 +128,30 @@
                 a quibusdam.
             </p>
         </section>
+        <section class="normal-content">
+            <p class="mid-message">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quo laudantium iusto nobis odio,
+                architecto, alias amet libero dolore doloribus esse neque? Harum, facilis? Est sunt officiis ratione!
+                Aliquid illo perspiciatis officiis amet iusto corrupti eos soluta dolorum dolores rerum? Officiis nobis
+                exercitationem rerum quas. Dolorum dolorem nemo sed at, perferendis ducimus magnam reprehenderit quod
+                repellat mollitia eos, dolore, odit modi nesciunt placeat fuga in pariatur molestias sint dicta maiores!
+                Adipisci deleniti quia quae velit corporis ipsam modi quasi voluptate aperiam. Necessitatibus nihil
+                impedit quas autem iusto, quod eos accusamus. Distinctio, necessitatibus. Iure delectus est magnam nisi
+                placeat voluptas unde.
+            </p>
+        </section>
+        <section class="normal-content">
+            <p class="mid-message">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quo laudantium iusto nobis odio,
+                architecto, alias amet libero dolore doloribus esse neque? Harum, facilis? Est sunt officiis ratione!
+                Aliquid illo perspiciatis officiis amet iusto corrupti eos soluta dolorum dolores rerum? Officiis nobis
+                exercitationem rerum quas. Dolorum dolorem nemo sed at, perferendis ducimus magnam reprehenderit quod
+                repellat mollitia eos, dolore, odit modi nesciunt placeat fuga in pariatur molestias sint dicta maiores!
+                Adipisci deleniti quia quae velit corporis ipsam modi quasi voluptate aperiam. Necessitatibus nihil
+                impedit quas autem iusto, quod eos accusamus. Distinctio, necessitatibus. Iure delectus est magnam nisi
+                placeat voluptas unde.
+            </p>
+        </section>
         <footer class="footer">2020, 1분코딩</footer>
     </div>
 
